<resources>
    <string name="app_name">汇脉宝</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="home_1">首页</string>
    <string name="home_2">互推圈</string>
    <string name="home_2_c">提高曝光率</string>
    <string name="home_3">发现</string>
    <string name="home_4">我的</string>
    <string name="home_5">文库</string>
    <string name="home_6">汇营天下</string>
    <string name="home_7">全民推广</string>
    <string name="home_7_c">玩广告得脉宝</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="expand">展开</string>
    <string name="collapse">收起</string>

    <string name="no_datas">暂无数据</string>
    <string name="no_datas_1">错过了机会，明天早点来吧！</string>
    <string name="no_datas_2">你还没有制作产品微网</string>
    <string name="no_datas_3">参加互推、完成分享任务，带来无限浏览量</string>
    <string name="no_datas_4">还没有哦</string>
    <string name="no_datas_5">你还没有收藏名片</string>
    <string name="no_datas_6">你还没有收藏文章</string>
    <string name="no_datas_7">你还没有营销网页</string>
    <string name="no_datas_8">完善名片、制作网页，参加互推，\n分享出去，提升人气</string>
    <string name="no_datas_9">制作吸引人的网页，参加互推，分享出去，\n他人对您的兴趣倍增</string>
    <string name="no_datas_10">客官很抱歉,暂无榜单</string>
    <string name="no_datas_11">你还没有发布动态</string>
    <string name="no_datas_12">你还未有人气</string>
    <string name="no_datas_13">未有客户对你感兴趣</string>
    <string name="no_datas_14">你还没有去关注</string>
    <string name="no_datas_15">你还未拥有粉丝</string>
    <string name="no_datas_16">暂无通知</string>
    <string name="no_datas_17">暂无提醒</string>
    <string name="no_datas_18">很抱歉,网络走丢了</string>

    <string name="login_user_agreement">注册登录即同意《汇脉宝用户协议》</string>


    <!-- ******************公共字段：用于OkHttpUtil****************** -->
    <string name="login_succeed">登录成功</string>
    <string name="login_fail_username_pwd">用户名或密码错误，请检查！</string>
    <string name="login_fail_username">用户不存在，请联系管理员！</string>
    <string name="login_over_exception">用户已到期，请联系管理员！</string>
    <string name="login_null_exception">服务器响应超时，请稍后重试！</string>
    <string name="login_json_exception">服务器数据解析异常，请联系管理员！</string>
    <string name="login_again">用户超时，请重新登录！</string>
    <string name="login_fail">登录失败，请重新登录！</string>

    <string name="response_null">数据内容为空</string>
    <string name="response_fail">请求失败，请重新请求！</string>

    <!-- ******************公共字段：用于HttpUtil****************** -->
    <string name="network_enable">当前网络未连接</string>
    <string name="network_terrible">当前网络不佳，请检查您的网络设置。</string>
    <string name="network_error">网络连接异常</string>
    <string name="network_timeout">网络请求超时，请重试</string>
    <string name="network_unavailable">网络连接不可用</string>
    <!-- 公共字段 end-->

    <!--pull-->
    <string name="header_tip_pull">下拉可以刷新</string>
    <string name="header_tip_realese">松开可以刷新</string>
    <string name="header_tip_refresh">正在刷新</string>
    <string name="header_tip_foot_loading">正在加载…</string>
    <string name="header_last_update_time">上次更新时间%s</string>
    <string name="list_view_data">这是第%s条数据</string>
    <string name="list_view_data_refresh">这是刷新后的第%s条数据</string>

    <!--wxpay-->
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="title_activity_pay_wx">微信支付</string>

    <!--首页-->
    <string name="home_marking_card">名片</string>
    <string name="home_web_personality">个人微页</string>
    <string name="home_marketing_web">营销网页</string>
    <string name="home_income_list">收入榜单</string>
    <string name="home_income_list_details">查看详情</string>
    <string name="home_marketing_list">营销榜单</string>
    <string name="home_more">更多</string>

    <string name="sreach_his">搜索历史</string>
    <string name="sreach_hot">热门搜索</string>
    <string name="sreach_clear">清除</string>

    <!--文库-->
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">所有频道</string>
    <string name="subscribe_more_category">频道推荐</string>
    <string name="subscribe_manager_category_info">点击添加</string>
    <string name="subscribe_manager_category_info_2">点击删除，长按拖拽排序</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>


    <!--消息-->
    <string name="message_title_1">人气</string>
    <string name="message_title_2">对我感兴趣</string>
    <string name="message_title_3">面试邀请</string>
    <string name="message_title_4">系统消息</string>


    <!--我的-->
    <string name="mine_member_center">会员中心</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_business_cooperation">招商合作</string>
    <string name="mine_invite_friends">邀请好友</string>
    <string name="mine_ggby">广告标语</string>
    <string name="mine_collection">收藏文章</string>
    <string name="mine_marketing_tag">营销标签</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_set">设置</string>

    <string name="mine_marketing_reward">营销奖励</string>
    <string name="mine_vein_treasure">脉宝</string>
    <string name="mine_basic_code">邀请码</string>


    <!--设置-->
    <string name="setting_account_management">账号管理</string>
    <string name="setting_payment_management">支付管理</string>
    <string name="setting_user_agreement">用户协议</string>
    <string name="setting_about_us">联系我们</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_next">下一步</string>
    <string name="setting_sure">确定</string>
    <string name="setting_commit">完成</string>

    <string name="bank_add_ts">持卡人说明: 为保证账号资金安全,只能绑定认证用户本人的银行卡(储蓄卡、借记卡),且不能绑定信用卡。</string>

    <!---->
    <string name="set_inviter">友情提示:\n1.请正确填写邀请人的电话号码,保存后不可更改;\n2.邀请人号码如果发生更改,将不会影响彼此的关系.</string>
    <string name="about_us_title">营销人的资源整合平台</string>

    <string name="user_agreement_title">汇脉宝用户协议与隐私条款</string>
    <string name="user_agreement">甲方：重庆汇脉宝网络科技有限公司（以下简单甲方或汇脉宝）\n
乙方：“汇脉宝”注册用户（以下简称用户或“您”）\n
您确认：在您使用 “汇脉宝”产品或服务前，您已充分阅读、理解并接受本协议的全部内容，一旦您开始使用汇脉宝，即表示您同意遵循本协议之所有约定。\n
此协议在必要时将进行修订，毋须另行通知。修订后的条款一旦在甲方官网上公布即有效代替原来的服务协议。您可以访问甲方官网来了解最新版本的服务协议。\n\n</string>
    <string name="user_agreement_1">帐户注册及使用：\n
1. 您保证具有法律规定的完全民事权利能力和民事行为能力, 能够独立承担民事责任的自然人、法人或其他组织；本协议内容不会被您所属国家或地区的法律禁止。\n
2. 当您注册时应当按网站要求填写您真实的信息及其他必要的信息以完成注册，不允许采用注册机或者其他类似的自动化方式注册账户。\n
3. 您的登录信息仅限您个人使用，请勿与他人共享，以免产生不必要的纠纷。\n
4. 您应当妥善保管自己的用户名及密码信息，防止泄露，避免因此而所产生的账号信息泄露损失。如发生此类信息泄露的情况，汇脉宝无法也不能保护您的数据信息权益。\n
5. 您应当对您的账户及所创建的内容及相关行为负责，您的操作行为如违反但不仅限于以下情况：非法、歧视、恐吓、诽谤、色情、淫秽、谣言、虚假、夸大、低俗、诱导、版权等违反包括中国法律、版权法规、商业竞争和广告宣传等在内的相关组织的法规（包括行政命令和相关协议条款）、国情风俗等，则应该对相关行为和内容负责，并停止实际行为；您应该当对已经造成的影响，实施包括道歉、补偿、承担罚款等有效行为。甲方不承担由于您的行为而导致的相关责任，但甲方有权制定相关规则，并单方面采取必要的措施，以限制您相关行为和内容的影响。\n
6. 您不得上传或者发布垃圾邮件，短信，或上传计算机病毒程序或者恶意代码等内容及相关信息或服务，也不得恶意攻击“汇脉宝”服务器，如出现上述情况，甲方将保留追究您法律责任的权利。\n
7. 您不得以口头或者文字方式攻击（包括恐吓、报复等）甲方用户、员工、合作伙伴和本产品及服务的其他使用者，如出现上述情况，甲方有权终止为您提供更多的服务内容，情节严重者，甲方将保留追究您法律责任的权利。\n
8. 如果您的账户流量存在恶意使用或明显超过正常情况的使用，我们有权直接关闭或暂停对您的服务。\n
9. 甲方产品支持市面上的主流社交媒体，浏览器（微信、微博、谷歌浏览器）和手机终端，非主流社交媒体，浏览器（微信、微博、谷歌浏览器）和手机终端，若发生无法正常使用汇脉宝服务的情况，甲方不对此负直接或间接责任。另外，您在使用甲方支持的上述载体时，请您遵守使用的规范，如您的内容被包括但不限于微信、微博、谷歌浏览器等第三方服务管控或限制，对您造成损失的，甲方不承担相应的责任。\n
10. 您在本协议提供的服务期间，应遵守全部中国法律、法规和规章。如果甲方因乙方的任何触犯中国法律法规的行为或违反本协议的行为而承受任何损失或损害，乙方应该采取所有行动使甲方免于承担责任，并对由此产生的全部损失和损害承担赔偿责任。\n
11. 如果乙方存在任何触犯中国法律法规的行为或违反本协议的行为，甲方有权根据行为的严重性自行决定立即暂停或终止乙方对本服务的使用，甲方无须就服务暂停或终止对乙方承担任何责任，并且无须返还乙方已支付的费用。\n
12. 乙方在进行网页制作推广时，需严格执行《互联网广告管理暂行办法》相关规定。2016年9月1日起，乙方所制作用于广告推广的服务，需要明确标注场景“广告”字样，如因乙方行为构成违反相关法律或行政法规，甲方不承担因此造成的后果和法律责任。\n\n</string>
    <string name="user_agreement_2">内容和版权：\n
1. 您享有在“汇脉宝”提交的作品内容的版权。但如果您将页面设置为发布，就意味着您允许其他人查看您的内容。\n
2. 您应当了解，当您授权甲方共享您的推广内容时，甲方的其他注册用户可以二次编辑、传播、分享您通过易企秀编辑生成的共享作品。同时甲方有权再次编辑优化您共享作品，以便为其他用户提供更好的内容服务。\n
3. 您明白甲方对他人提供的任何内容不在任何方面负责或负有责任，除非甲方收到相反通知，甲方将您视为其在本网站上传或发布的内容的著作权人或合法的授权人。\n
4. 甲方没有义务预先审查您发布的推广内容。但是，甲方有权随时决定查看推广内容是否与本协议相符；如果发现您的推广内容违反“汇脉宝”产品制作要求，甲方可随时并有绝对酌情权预先审查、转移、拒绝、修改和删除内容，而不需事先通知。\n
5. 如您制作的内容脱离甲方服务器进入第三方服务，属于您的个体行为，甲方没有义务承担由于您的行为操作的任何后果。\n
6. 如您在“汇脉宝”发布的推广内容，在本网站的上传或发布而导致任何第三方提出索赔要求或衍生的任何损害或损失，您承担赔偿甲方及其分公司、关联公司、代理人或其他合作伙伴及员工的全部责任，并使其免受损害。\n
        7. 如您在“汇脉宝”使用了第三方所提供的作品，侵犯了他人知识产权，或者违反法律法规的作品而被追究责任，您可以向相应作品的第三方作者追究责任和索赔，甲方不承担相应的法律责任。\n\n</string>
    <string name="user_agreement_3">知识产权条款：\n
甲方提供的服务及产品（包括但不限于观感、设计、素材、代码等）的版权、商标权、专利权及其他知识产权均归属于甲方。您不得复制、重用任何代码或者任何视觉设计，也不得对甲方产品进行反向工程、分解或进行编译或其他修改。\n\n
付费相关条款：\n
1. “汇脉宝”提供免费和付费产品供您使用，甲方有权依据市场需求调整或新推出付费产品、功能或服务及相关的服务费用。具体调整均以甲方官网公示为准。\n
2. 您有权自由选择决定是否使用“汇脉宝”中的付费产品、功能或服务。甲方会尽力但不保证对您的每一次付费操作进行确认提醒，包括但不限于付费金额和服务内容。\n
3. 甲方可能要求您提供经甲方认可的发卡机构发行的信用卡或借记卡和其他第三方支付平台，以收取您购买服务的对应费用。\n
4. 服务费用不包含因您使用“汇脉宝”，访问互联网或移动网络而产生的相关费用，您需要自行承担因使用“汇脉宝”服务而向包括网络运营商在内的第三方支付的相关费用，例如，互联网接入费、手机流量费、手机短信费等。\n
5. 甲方会尽力但不保证提供完善的付费产品、功能或服务的相关内容，提供方式包括但不限于页面提醒和客服服务。您有权在选择购买前，通过以上渠道，详细了解所有产品功能和服务细则。甲方不承担因您未充分了解付费产品、功能或服务的内容，而提出的退款或赔偿诉求。\n
6. 您在购买甲方增值服务（包含但不限于购买VIP、账号升级、功能服务、推广币、使用权限、第三方推广作品等），因您主观原因（包含但不限于不愿继续持有、非甲方产品或服务问题等）产生的退款行为，甲方有权不进行受理。\n
7. 您有权充分了解或评估使用甲方产品存在的风险，包含但不限于网络问题，信息安全，版权问题以及其他非甲方服务所导致的产品使用异常。\n
8. 甲方依据现有技术提供服务，并全力维护网站的正常运行，但甲方无法随时预见任何技术上的问题或其他困难，该等困难可能导致您的使用受到影响（包含但不限于制作、推广等），您需谨慎考虑使用甲方操作平台所提供的服务可能带来的风险，如因此类问题产生的退款行为，甲方不负任何直接或间接赔偿责任。\n
9. 甲方提供与其它网站或资源的链接，您可能会因此连结至其它运营商经营的网站，但不表示甲方与这些运营商有任何关系，甲方不对上述链接网站及其网页内容进行管理监督。因使用或依赖任何此类网站或资源发布的或经由此类网站或资源获得的任何内容、物品或服务所产生的任何损害或损失，甲方有权协商处理，但无承担任何直接或间接赔偿责任的义务。\n
10. 您有权充分了解甲方给予的产品使用和功能权限，并根据自身需自愿选择付费使用您所需要的功能和服务。如因您自身原因（包含但不限于未仔细阅读相关服务协议、审核规则、账号权限等）未能充分了解甲方提供的服务，在购买服务后未能得到预期的效果（包含但不限于消耗类服务、数据类服务，推广类服务等）产生的退款行为，以及相关的损害或损失，甲方不负任何直接或间接赔偿责任。\n
11. 您在甲方所产生的付款，可能被用作支付某些第三方版权与服务的费用，因第三方使用过程中产生的纠纷，甲方有权协商处理，但无承担任何直接或间接赔偿责任的义务。\n
12. 在任何情况下，甲方均无须对任何间接性、后果性、惩戒性、偶然性、特殊性或刑罚性的损害(包括但不限于乙方因使用甲方服务而遭受损失及对他人造成的损失)承担责任；\n
13. 甲方对乙方承担的全部责任总额，无论因何原因（基于合同法、侵权法或其他法规）或何种行为方式产生，始终不超过乙方在服务期内因使用甲方服务而已经支付给甲方的费用。\n
14. 甲方会尽力对您在使用付费产品，功能和服务过程中遇到的问题，提供可行的解决方案，并最终解决您的问题。如非甲方产品，功能和服务问题所导致的使用异常，甲方不负任何直接或间接赔偿责任。\n
        15. 甲方提供第三方运营的推广付费服务，您有权力充分了解第三方推广产品的服务内容（包括但不限于服务定价，审核规则，推广效果等），如非产品本身问题所导致的退款或赔偿诉求（包括但不限于推广效果不佳，费用问题等），甲方不负任何直接或间接赔偿责任。\n\n</string>
    <string name="user_agreement_4">服务终止条款：\n
甲方可随时且不需事先通知，立即终止或暂停您的所有或部分帐户服务功能。此类服务终止的原因包括但不限于以下：\n
1. 违反本服务协议；\n
2. 需要听从法庭传票、法律命令或遵循法律程序；\n
3. 突发的自然灾害导致的问题；\n
4. 战争、军事行动、暴动或武装叛乱；\n
5. 您没有支付所需付费服务相关的费用；\n
6. 因不可抗力致使不能提供服务的情况；\n
7. 如您提供不具有自主知识产权的作品或侵犯他人知识产品，情节严重者，甲方将解除与您的服务协议，如由此产生的法律责任，由您承担；\n
8. 如您的作品内含有违反法律法规内容，我们将与您解除服务协议，由此产生的法律责任由您承担；\n
9. 服务终止：在终止本协议后的合理时间内，甲方将有权下架所有您上传至“汇脉宝”的作品，您及其他用户将无法再浏览您的作品；\n
10. 您长期不再使用甲方帐户。\n\n
隐私政策：\n
1. 使用本服务，即表示您同意甲方合法收集和使用有关您及您所使用本服务的技术性或诊断性信息。收集到的些信息将用于改进甲方产品和服务的改进，提升我们的服务品质。\n
2. 甲方不会将您的信息和内容分享或出售给其他的组织。但以下情况除外：\n
1）您同意让第三方共享资料；\n
2）甲方需要听从法庭传票、法律命令或遵循法律程序；\n
3）您违反了本条款。\n\n
其他条款：\n
1. 甲方将以专业的方式提供产品及服务，但并不保证：\n
1) 产品及服务满足您的所有需求或您的所有期待；\n
2) 产品及服务没有任何失误或缺陷，或产品及服务中的所有错误都会被及时修正。\n
2. 甲方保留不断修改调整产品或服务的权利，无需事先通知乙方。\n
3. 您了解甲方使用第三方的运营商和网络提供商提供必要的硬件、软件、存储或网络来运行汇脉宝服务。甲方无需因为第三方的、或者不在甲方控制范围内的原因（如不可抗力）造成的运行问题（如服务中断、停顿、中止等）负责。\n
4. 如果本协议的某一条款或某一条款的一部分无效或不可执行，不影响本协议其他条款的有效性，无效或不可执行的条款将被视作已从本协议中删除。\n
5. 本协议受中华人民共和国法律管辖。在执行本协议过程中如发生纠纷，双方应及时协商解决。协商不成时，任何一方均有权向甲方所在地人民法院提起诉讼。\n
6. 本协议中未明确授予您的权利将由甲方保留。\n
7. 若有任何疑问，请通过浏览器浏览</string>
    <string name="user_agreement_5">http://www.51huimaibao.cn</string>
    <string name="user_agreement_6">网站下方的联系方式与我们联系。\n\n</string>


    <string name="elect_content_1">1、匹配次数</string>
    <string name="elect_content_2">①新用户每天主动匹配2次，被动匹配2次；</string>
    <string name="elect_content_3">②用户累计邀请5位好友且好友参加互推，则每天主动匹配3次，被动匹配3次</string>
    <string name="elect_content_4">③用户累计邀请10位好友且好友参加互推，则每天主动匹配4次，被动匹配4次</string>
    <string name="elect_content_5">2、匹配成功，相互分享，完成互推</string>
    <string name="elect_content_6">3、若超过24小时不去分享匹配用户的互推内容，将丧失匹配他人和被他人匹配的资格，必须分享完匹配用户的互推内容，才恢复资格。</string>

</resources>
