<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_05"
            android:background="@color/linee7e7e7" />

        <LinearLayout
            android:id="@+id/home_item_bottom_ll"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/home_buttom_home_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/home_buttom_home_19" />

                <TextView
                    android:id="@+id/home_buttom_home_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_buttom_home_iv"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_1"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_10" />

                <TextView
                    android:id="@+id/home_buttom_home_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onAction" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/home_buttom_elect_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/home_buttom_elect_0" />

                <TextView
                    android:id="@+id/home_buttom_elect_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_buttom_elect_iv"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_2"
                    android:textColor="@color/ff8e8e93"
                    android:textSize="@dimen/text_size_10" />

                <TextView
                    android:id="@+id/home_buttom_elect_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onAction" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/home_buttom_msg_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/home_buttom_msg_0" />

                <TextView
                    android:id="@+id/home_buttom_msg_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_buttom_msg_iv"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_3"
                    android:textColor="@color/ff8e8e93"
                    android:textSize="@dimen/text_size_10" />

                <TextView
                    android:id="@+id/home_buttom_msg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onAction" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0">


                <ImageView
                    android:id="@+id/home_buttom_mine_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/home_buttom_mine_0" />

                <TextView
                    android:id="@+id/home_buttom_mine_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_buttom_mine_iv"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_4"
                    android:textColor="@color/ff8e8e93"
                    android:textSize="@dimen/text_size_10" />

                <TextView
                    android:id="@+id/home_buttom_mine_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onAction" />
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/dialog_home_layout" />
</RelativeLayout>