<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_no_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="162dp"
            android:src="@drawable/home_no_elect_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="385dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/home_no_making_bg"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/business_card_icon"
                        android:drawablePadding="8dp"
                        android:gravity="center"

                        android:text="@string/home_marking_card"
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_size_11" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/personal_piconets_icon"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="@string/home_web_personality"
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_size_11" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/marketing_web_icon"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="@string/home_marketing_web"
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_size_11" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="475dp"
            android:src="@drawable/home_no_making_icon" />

        <TextView
            android:id="@+id/home_no_ll_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/home_no_btn_bg"
            android:gravity="center"
            android:onClick="onAction"
            android:text="知道啦！"
            android:textColor="#fefefe"
            android:textSize="@dimen/text_size_18" />

    </RelativeLayout>


</RelativeLayout>